--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html --dist-dir ./dist"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "author": "ismael jabareen",
   "license": "ISC",
   "description": "My portfolio website",
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
-    "@parcel/packager-raw-url": "^2.13.0",
-    "@parcel/transformer-webmanifest": "^2.13.0",
-    "parcel": "^2.13.0"
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.0.8"
   }
 }
